# HARITHA_ROS_TASK1

./: README.md
install/: local_setup.sh  setup.sh
install/mobile_robot_description/share/mobile_robot_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mobile_robot_description/share/mobile_robot_description/launch/: display.launch.py  gazebo.launch.py  spawn_robot.launch.py
install/mobile_robot_description/share/mobile_robot_description/urdf/: mobile_base.urdf.xacro
log/: latest_build
src/mobile_robot_description/: package.xml  setup.cfg  setup.py
src/mobile_robot_description/launch/: display.launch.py  gazebo.launch.py  spawn_robot.launch.py
src/mobile_robot_description/urdf/: mobile_base.urdf.xacro  mobile_base_generated.urdf
