<?xml version="1.0"?>
<package format="3">
  <name>mobile_robot_description</name>
  <version>0.0.1</version>
  <description>URDF/XACRO model of a mobile base with ROS 2 support</description>
  <maintainer email="haritha@todo.todo">Haritha</maintainer>
  <license>MIT</license>

  <!-- Run dependencies -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
